# navigation_packages

./: LICENSE  README.md  stage.sh
move_base_test/costmap_2d/include/costmap_2d/: inflation_layer.h
move_base_test/costmap_2d/plugins/: inflation_layer.cpp  static_layer.cpp
move_base_test/costmap_2d/src/: costmap_2d_ros.cpp
move_base_test/map_server/: CMakeLists.txt
move_base_test/map_server/src/: main.cpp
move_base_test/move_base/include/move_base/: move_base.h
move_base_test/move_base/src/: move_base.cpp
move_base_test/路径规划/: stage仿真笔记.docx
move_base_test/路径规划/navigation源码阅读笔记/代价地图/: Costmap2D代价地图源码解读-膨胀层.docx
mpc_local_planner/mpc_local_planner/: CMakeLists.txt
ros_ws/ws_stage/src/: CMakeLists.txt
ros_ws/ws_stage/src/Stage/: config.h
simulator/: map_server.sh  move_base.sh  simulate-launch.py  stage.sh  static_tf.sh
simulator/launch/: stage_navigation.launch
simulator/maps/: dongchuang_map.yaml
simulator/rviz/: navigation.rviz
simulator/stage/: dongchuang.world
teb_planner/devel/: .catkin  .rosinstall  local_setup.sh
teb_planner/devel/include/amcl/: AMCLConfig.h
teb_planner/devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelPluginConfig.h
teb_planner/devel/include/global_planner/: GlobalPlannerConfig.h
teb_planner/devel/include/teb_local_planner/: TebLocalPlannerReconfigureConfig.h
teb_planner/devel/lib/amcl/: amcl
teb_planner/devel/lib/base_local_planner/: point_grid
teb_planner/devel/lib/costmap_2d/: costmap_2d_cloud  costmap_2d_markers  costmap_2d_node
teb_planner/devel/lib/fake_localization/: fake_localization
teb_planner/devel/lib/global_planner/: planner
teb_planner/devel/lib/map_server/: map_saver  map_server  rtest
teb_planner/devel/lib/move_base/: move_base
teb_planner/devel/lib/navfn/: navfn_node
teb_planner/devel/lib/pkgconfig/: amcl.pc  base_local_planner.pc  carrot_planner.pc  clear_costmap_recovery.pc  costmap_2d.pc  dwa_local_planner.pc  fake_localization.pc  global_planner.pc  map_server.pc  move_base.pc  move_slow_and_clear.pc  nav_core.pc  navfn.pc  rotate_recovery.pc  teb_local_planner.pc  teb_local_planner_tutorials.pc  voxel_grid.pc
teb_planner/src/teb_local_planner-melodic-devel/: CMakeLists.txt
tf_broadcaster/: CMakeLists.txt  package.xml
vox_nav-foxy/src/: CMakeLists.txt
(+37 files in other folders)
